Added insert number page

--- a/multiply/templates/multiply/multiTable.html
+++ b/multiply/templates/multiply/multiTable.html
@@ -1,7 +1,5 @@
 <ul>
-
+{% for r in range(5) %}
     <li><p>{{number}}</p></li>
-<li><p>{{number}}</p></li>
-<li><p>{{number}}</p></li>
-
+{% endif %}
 </ul>
