used loop to show number depend on inputted number

--- a/multiply/templates/multiply/multiTable.html
+++ b/multiply/templates/multiply/multiTable.html
@@ -1,5 +1,5 @@
 <ul>
-{% for r in range(5) %}
-    <li><p>{{number}}</p></li>
-{% endif %}
+{% for r in results %}
+    <li><p>{{r}}</p></li>
+{% endfor %}
 </ul>
