--- a/multiply/templates/multiply/index.html
+++ b/multiply/templates/multiply/index.html
@@ -1,4 +1,5 @@
 <h1>Home</h1>
+{% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
 <form action="{% url 'multi' %}" method="post">
 {% csrf_token %}
 insert your number:<input type="number" name="num">
