--- a/multiply/templates/multiply/multiTable.html
+++ b/multiply/templates/multiply/multiTable.html
@@ -1,5 +1,5 @@
 <ul>
 {% for r in results %}
-    <li><p>{{r}}</p></li>
+    <li><p>{{number}} X {{ forloop.counter }} = {{r}}</p></li>
 {% endfor %}
 </ul>
