Created statistic model and Edited mulitiplication fuction

--- a/multiply/templates/multiply/index.html
+++ b/multiply/templates/multiply/index.html
@@ -5,3 +5,4 @@
 insert your number:</br><input type="number" name="num">
 <input type="submit" value="enter">
 </form>
+<a href="{% url 'history' %}">History</a>
