Added change history sorting mode

--- a/multiply/templates/multiply/history.html
+++ b/multiply/templates/multiply/history.html
@@ -2,6 +2,7 @@
 <style>
  table, th ,td{border:1px solid black; border-collapse: collapse;}
 </style>
+<p>sort : {{sort_by}}</p>
 <table width="20%">
    <tr>
        <th>Number</th>
